metadata/force-app/main/default/objects/CustomName_IFLTe__c/CustomName_IFLTe__c.object-meta.xml
<CustomObject>
    <description>Description_LHGVL</description>
    <label>CustomLabel_UaNTw</label>
    <nameField>
        <label>CustomLabel_UaNTw</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_UaNTws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>