metadata/force-app/main/default/objects/CustomName_IFLTe__c/fields/CustomField_alkBP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_alkBP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldSBDzb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>